Renombro imágenes y arreglo rutas para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
    <div class="encabezado">
   <div class="logo-centro">
-    <img src="/imagenes/logo-instituto.png.jpg" alt="Logo Instituto" class="logo">
+    <img src="imagenes/logo-instituto.png.jpg" alt="Logo Instituto" class="logo">
   </div>
   <div class="nombre-derecha">
-    <img src="/imagenes/nombre-profesor.png.jpg" alt="Prof. Ricardo Visconti" class="profesor">
+    <img src="imagenes/nombre-profesor.png.jpg" alt="Prof. Ricardo Visconti" class="profesor">
   </div>
 </div>
 
